--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,31 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:latest
-    container_name: my_postgres_db
+  # Airflow Webserver
+  airflow_webserver:
+    image: apache/airflow:2.5.1
+    container_name: airflow_webserver
+    restart: always
+    depends_on:
+      - my_postgres_db
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@my_postgres_db/airflow
+      AIRFLOW__CORE__FERNET_KEY: "your_fernet_key_here"
+      AIRFLOW__CORE__LOAD_EXAMPLES: "False"
     ports:
-      - "5432:5432"
+      - "8080:8080"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - airflow_data:/opt/airflow
+    entrypoint: ["bash", "-c", "airflow db upgrade && airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true && airflow webserver"]
+
+  # Airflow Scheduler
+  airflow_scheduler:
+    <<: *airflow_base  # Используем ту же конфигурацию, но меняем команду запуска
+    container_name: airflow_scheduler
+    depends_on:
+      - airflow_webserver
+    entrypoint: ["bash", "-c", "airflow scheduler"]
 
 volumes:
-  db_data:
+  airflow_data:
