--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,28 @@
 version: '3.8'
 
 services:
-  # Airflow Webserver
-  airflow_webserver:
+  airflow_base: &airflow_base  # Определяем базовые настройки
     image: apache/airflow:2.5.1
-    container_name: airflow_webserver
     restart: always
-    depends_on:
-      - my_postgres_db
     environment:
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
       AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@my_postgres_db/airflow
       AIRFLOW__CORE__FERNET_KEY: "your_fernet_key_here"
       AIRFLOW__CORE__LOAD_EXAMPLES: "False"
-    ports:
-      - "8080:8080"
     volumes:
       - airflow_data:/opt/airflow
+
+  # Веб-интерфейс Airflow
+  airflow_webserver:
+    <<: *airflow_base  # Используем базовые настройки
+    container_name: airflow_webserver
+    ports:
+      - "8080:8080"
     entrypoint: ["bash", "-c", "airflow db upgrade && airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true && airflow webserver"]
 
-  # Airflow Scheduler
+  # Планировщик DAG-ов
   airflow_scheduler:
-    <<: *airflow_base  # Используем ту же конфигурацию, но меняем команду запуска
+    <<: *airflow_base  # Используем те же настройки
     container_name: airflow_scheduler
     depends_on:
       - airflow_webserver
