--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,50 @@
 version: '3.8'
 
 services:
-  db:
-    image: postgres:latest
-    container_name: my_postgres_db
+  # Сервис для базы данных PostgreSQL
+  postgres:
+    image: postgres:13
+    restart: always
     environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
+      POSTGRES_USER: airflow
+      POSTGRES_PASSWORD: airflow
+      POSTGRES_DB: airflow
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "54322:5432"
+
+  airflow_base: &airflow_base  # Определяем базовые настройки
+    image: apache/airflow:2.5.1
+    restart: always
+    environment:
+      AIRFLOW__CORE__EXECUTOR: LocalExecutor
+      AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://airflow:airflow@postgres/airflow
+      # AIRFLOW__CORE__FERNET_KEY используется для шифрования конфиденциальных данных в базе данных Airflow
+      # Я думаю он мне не нужен, так как я работаю локально
+      # AIRFLOW__CORE__FERNET_KEY: "your_fernet_key_here"
+      AIRFLOW__CORE__LOAD_EXAMPLES: "False"
+    volumes:
+      - airflow_data:/opt/airflow
+    depends_on:
+      - postgres
+
+  # Веб-интерфейс Airflow
+  airflow_webserver:
+    <<: *airflow_base  # Используем базовые настройки
+    container_name: airflow_webserver
+    ports:
+      - "8080:8080"
+    entrypoint: ["bash", "-c", "airflow db upgrade && airflow users create --username admin --password admin --firstname Admin --lastname User --role Admin --email admin@example.com || true && airflow webserver"]
+
+  # Планировщик DAG-ов
+  airflow_scheduler:
+    <<: *airflow_base  # Используем те же настройки
+    container_name: airflow_scheduler
+    depends_on:
+      - airflow_webserver
+    entrypoint: ["bash", "-c", "airflow scheduler"]
 
 volumes:
-  db_data:
+  airflow_data:
+  postgres_data:
